# python-sandbox

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
scratch/: main.org
src/sandbox/: share.py  utils.py
src/tm/: share.py  utils.py
