[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "tax-material"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.3.0",
  "plotly>=6.1.2",
]
scripts.share = "tm.share:main"

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupytext>=1.17.2",
]

[tool.ruff]
target-version = "py311"
lint.select = [
  "F",
  "I",
  "UP",
]

[tool.sqlfluff]
core.dialect = "vertica"
indentation.allow_implicit_indents = true
rules.references.keywords.ignore_words = "day"
