[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thibautvas", email = "thibaut.vas@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
]

[project.scripts]
share = "sandbox.share:main"

[project.optional-dependencies]
convert = [
    "jupytext>=1.17.2",
]
kernel = [
    "ipykernel>=6.30.1",
    "pip>=25.2",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.404",
    "ruff>=0.12.9",
    "sqlfluff>=3.4.2",
]

[tool.ruff]
target-version = "py311"
lint.select = [ "E4", "E7", "E9", "F", "I", "UP" ]

[tool.sqlfluff]
core.dialect = "vertica"
indentation.allow_implicit_indents = true
rules.references.keywords.ignore_words = "day"
